# GliderTools

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .readthedocs.yml  .travis.yml  AUTHORS.md  HISTORY.md  HOWTOCONTRIBUTE.rst  LICENSE  Pipfile  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.binder/: environment.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  pythonpackage.yml  test.yml
ci/: environment-dev-3.7.yml  environment-py3.6.yml  environment-py3.7.yml  environment-py3.8.yml  environment.yml  run-linter.sh
docs/: api.rst  authors.md  calibration.md  cheatsheet.md  citing.md  citing.rst  conf.py  contributing.rst  documentation.md  index.rst  installation.md  loading.md  mapping.md  optics.md  other.md  package_structure.md  physics.md  quality_control.md  requirements.txt  saving.md  whats-new.rst  wishlist.md
docs/static/css/: custom.css
glidertools/: __init__.py  _version.py  calibration.py  cleaning.py  flo_functions.py  helpers.py  mapping.py  optics.py  physics.py  plot.py  processing.py  utils.py
glidertools/load/: __init__.py  ego.py  seaglider.py  slocum.py  voto_seaexplorer.py
notebooks/: Demo_GT.ipynb
tests/: pytest.ini  test_calibration.py  test_cleaning.py  test_dive_numbers.py  test_flo_functions.py  test_imports.py  test_load.py  test_mapping.py  test_optics.py  test_physics.py  test_plot.py  test_processing.py
tests/data/: p5420304.nc  p5420305.nc  p5420306.nc  p5420307.nc  p5420308.nc  p5420309.nc  p5420310.nc  p5420311.nc  p5420312.nc  p5420313.nc  p5420314.nc  p5420315.nc  p5420316.nc  p5420317.nc  voto_nrt.nc
