[flake8]
ignore = E122, E123, E126, E127, E128, E731, E722, E203, E741, W503
max-line-length = 88
max-complexity = 22
exclude = build,tests,.git,benchmarks,.asv, glidertools/_version.py
per-file-ignores =
    glidertools/flo_functions.py: F841, E501
    __init__.py: F401, F403

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[tool:pytest]
testpaths=tests/
addopts= --cov --cov-fail-under=20

[doc8]
# https://pypi.org/project/doc8/
ignore-path = docs/_build
max-line-length = 100
sphinx = True

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[metadata]
name = glidertools
description = ("A toolkit for processing Seaglider base station NetCDF files: "
        "despiking, smoothing, outlier detection, backscatter, fluorescence "
        "quenching, calibration, gridding, interpolation. Documentation "
        "at https://glidertools.readthedocs.io")
author = Luke Gregor
url = https://github.com/GliderToolsCommunity/GliderTools
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNUv3
license_file = LICENSE

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 3 - Alpha,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Intended Audience :: Science/Research,
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

## Add your email here
author_email = "lukegre@gmail.com"


### make sure to fill in your dependencies!
[options]
install_requires =
    numexpr
    netcdf4
    pandas
    xarray
    numpy
    scikit-learn
    scipy
    tqdm
    matplotlib
    gsw
    seawater

setup_requires=
    setuptools_scm
python_requires = >=3.8
################ Up until here

zip_safe = False
packages = find:
